# lkmd

./: .gitignore  CMakeLists.txt  README  README.md  lkmd.c  lsmod.c
app/: CMakeLists.txt  main.c
include/: globaldef.h  lkmd.h  lsmod.h
src/: lkmd.c
tool/: CMakeLists.txt  main.c
tool/include/: getoptusage.h
tool/src/: getoptusage.c
